test/edition/basics/attributeCheck-badLastEditionName.good
attributeCheck-badLastEditionName.chpl:3: error: unknown last edition 'thisHadBetterNeverBeAnActualEditionNameYall'
